# rmat

./: CMakeLists.txt  CMakePresets.json  LICENSE  rmat.cpp
